--- a/assets/stylesheets/menu.css
+++ b/assets/stylesheets/menu.css
@@ -1,45 +1,65 @@
-body { overflow: hidden; }
+body {
+    overflow: hidden;
+}
 
-.navbar-offset { margin-top: 50px; }
+.navbar-offset {
+    margin-top: 50px;
+}
 
-.mini-submenu{
-  display:none;  
-  background-color: rgba(255, 255, 255, 0.46);
-  border: 1px solid rgba(0, 0, 0, 0.9);
-  border-radius: 4px;
-  padding: 9px;  
-  /*position: relative;*/
-  width: 42px;
-  text-align: center;
-  margin-left: 10px;
+.mini-submenu {
+    display: none;
+    background-color: rgba(255, 255, 255, 0.46);
+    border: 1px solid rgba(0, 0, 0, 0.9);
+    border-radius: 4px;
+    padding: 9px;
+    /*position: relative;*/
+    width: 42px;
+    text-align: center;
+    margin-left: 10px;
+    margin-top: 30px;
+}
+
+.mini-submenu.submenu {
+    display: none;
+    background-color: rgba(255, 255, 255, 0.46);
+    border: 1px solid rgba(0, 0, 0, 0.9);
+    border-radius: 4px;
+    padding: 9px;
+    /*position: relative;*/
+    width: 42px;
+    text-align: center;
+    margin-left: 10px;
+    margin-top: 75px;
 }
 
 .mini-submenu-left {
-  position: absolute;
-  top: 89px;
-  left: .5em;
-  z-index: 40;
+    position: absolute;
+    top: 89px;
+    left: .5em;
+    z-index: 40;
 }
 
-.sidebar { z-index: 45; }
-
-.main-row { 
-  position: relative;
-  top: 93px;
-  left: 5px;
-  min-width: 450px !important;
+.sidebar {
+    z-index: 45;
 }
 
-.mini-submenu:hover{
-  cursor: pointer;
+.main-row {
+    position: relative;
+    top: 93px;
+    left: 5px;
+    min-width: 450px !important;
 }
 
-.slide-submenu{
-  background: rgba(0, 0, 0, 0);
-  display: inline-block;
-  padding: 3px  10px;
-  border-radius: 4px;
-  border: #ccc 1px solid ;
-  margin-top: -3px;
-  cursor: pointer;
+.mini-submenu:hover {
+    cursor: pointer;
+}
+
+.slide-submenu {
+    background: rgba(0, 0, 0, 0);
+    display: inline-block;
+    padding: 3px 10px;
+    border-radius: 4px;
+    border: #ccc 1px solid;
+    margin-top: -3px;
+    cursor: pointer;
 }
