--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -204,3 +204,10 @@
 .pace.pace-inactive {
   display: none;
 }
+
+
+@media (min-width: 768px) and (max-width: 1096px) {
+   .nav-mol-r {
+       display: none !important;
+   }
+}
